--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -19,6 +18,28 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+
+    <link rel="stylesheet" href="https://uitk.learnvest.com/v/1.16.0/css/nm/fonts.css" />
+    <link rel="stylesheet" href="https://uitk.learnvest.com/v/1.16.0/css/nm/icons.css" />
+    <link rel="stylesheet" href="https://uitk.learnvest.com/v/1.16.0/css/nm/main.css" />
+
+
+    <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyBbyH3EB5jJqOLo8vyjeysHViU3q1Y-FrI",
+        authDomain: "rideshare-b7e9e.firebaseapp.com",
+        databaseURL: "https://rideshare-b7e9e.firebaseio.com",
+        projectId: "rideshare-b7e9e",
+        storageBucket: "rideshare-b7e9e.appspot.com",
+        messagingSenderId: "80398535460"
+      };
+      firebase.initializeApp(config);
+    </script>
+
+
     <title>React App</title>
   </head>
   <body>
