using boiler plate

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="https://uitk.learnvest.com/v/1.16.0/css/nm/main.css" />
     <!--<script src="https://www.gstatic.com/firebasejs/4.1.2/firebase-database.js"></script>-->
 
-    <title>React App</title>
+    <title>Ride Share</title>
   </head>
   <body>
     <noscript>
