--- a/public/index.html
+++ b/public/index.html
@@ -23,24 +23,10 @@
     <link rel="stylesheet" href="https://uitk.learnvest.com/v/1.16.0/css/nm/fonts.css" />
     <link rel="stylesheet" href="https://uitk.learnvest.com/v/1.16.0/css/nm/icons.css" />
     <link rel="stylesheet" href="https://uitk.learnvest.com/v/1.16.0/css/nm/main.css" />
-    <!--<script src="https://www.gstatic.com/firebasejs/4.1.2/firebase-database.js"></script>-->
-
-    <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
-    <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyBbyH3EB5jJqOLo8vyjeysHViU3q1Y-FrI",
-        authDomain: "rideshare-b7e9e.firebaseapp.com",
-        databaseURL: "https://rideshare-b7e9e.firebaseio.com",
-        projectId: "rideshare-b7e9e",
-        storageBucket: "rideshare-b7e9e.appspot.com",
-        messagingSenderId: "80398535460"
-      };
-      firebase.initializeApp(config);
     </script>
 
 
-    <title>React App</title>
+    <title>NM Rideshare</title>
   </head>
   <body>
     <noscript>
